--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
+Firdaus H Salim <https://linktr.ee/firdaus_h_salim>
