--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Firdaus H Salim <https://linktr.ee/firdaus_h_salim>
+Zerubabel Zerihun <zerubabel.zerihun0973@gmail.com>
